LULU2Parser.py
# Generated from LULU2.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class LULU2Parser ( Parser ):

    grammarFileName = "LULU2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'{'", "'}'", "','", "';'", "'='", 
                     "'('", "')'", "'['", "']'", "'-'", "'!'", "'~'", "'*'", 
                     "'/'", "'%'", "'+'", "'&'", "'|'", "'||'", "'&&'", 
                     "'<='", "'>='", "'=='", "'!='", "'<'", "'>'", "'allocate'", 
                     "'bool'", "'break'", "'caseof'", "'const'", "'continue'", 
                     "'default'", "'destruct'", "'else'", "'false'", "'function'", 
                     "'float'", "'for'", "'if'", "'int'", "'nil'", "'private'", 
                     "'protected'", "'public'", "'read'", "'string'", "'super'", 
                     "'switch'", "'this'", "'true'", "'type'", "'while'", 
                     "'write'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Allocate", "Bool", "Break", "Caseof", "Const", "Continue", 
                      "Default", "Destruct", "Else", "FALSE", "Function", 
                      "Float", "For", "If", "Int", "Nil", "Private", "Protected", 
                      "Public", "Read", "String", "Super", "Switch", "This", 
                      "TRUE", "Type", "While", "Write", "Dot", "Int_const", 
                      "Float_const", "String_const", "Bool_const", "ID", 
                      "WHITESPACE", "Comment" ]

    RULE_program = 0
    RULE_test = 1
    RULE_ft_def = 2
    RULE_type_def = 3
    RULE_component = 4
    RULE_access_modifier = 5
    RULE_var_def = 6
    RULE_type_ = 7
    RULE_var_val = 8
    RULE_fun_def = 9
    RULE_args_var = 10
    RULE_block = 11
    RULE_stmt = 12
    RULE_assign = 13
    RULE_var = 14
    RULE_ref = 15
    RULE_expr = 16
    RULE_func_call = 17
    RULE_list_ = 18
    RULE_handle_call = 19
    RULE_params = 20
    RULE_cond_stmt = 21
    RULE_switch_body = 22
    RULE_loop_stmt = 23
    RULE_const_val = 24
    RULE_unary_op = 25
    RULE_arithmetic1 = 26
    RULE_arithmetic2 = 27
    RULE_bitwise = 28
    RULE_logical = 29
    RULE_relational1 = 30
    RULE_relational2 = 31
    RULE_relational3 = 32

    ruleNames =  [ "program", "test", "ft_def", "type_def", "component", 
                   "access_modifier", "var_def", "type_", "var_val", "fun_def", 
                   "args_var", "block", "stmt", "assign", "var", "ref", 
                   "expr", "func_call", "list_", "handle_call", "params", 
                   "cond_stmt", "switch_body", "loop_stmt", "const_val", 
                   "unary_op", "arithmetic1", "arithmetic2", "bitwise", 
                   "logical", "relational1", "relational2", "relational3" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    Allocate=28
    Bool=29
    Break=30
    Caseof=31
    Const=32
    Continue=33
    Default=34
    Destruct=35
    Else=36
    FALSE=37
    Function=38
    Float=39
    For=40
    If=41
    Int=42
    Nil=43
    Private=44
    Protected=45
    Public=46
    Read=47
    String=48
    Super=49
    Switch=50
    This=51
    TRUE=52
    Type=53
    While=54
    Write=55
    Dot=56
    Int_const=57
    Float_const=58
    String_const=59
    Bool_const=60
    ID=61
    WHITESPACE=62
    Comment=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LULU2Parser.EOF, 0)

        def ft_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LULU2Parser.Ft_defContext)
            else:
                return self.getTypedRuleContext(LULU2Parser.Ft_defContext,i)


        def getRuleIndex(self):
            return LULU2Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = LULU2Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 66
                self.ft_def()
                self.state = 69 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LULU2Parser.T__6) | (1 << LULU2Parser.Function) | (1 << LULU2Parser.Type))) != 0)):
                    break

            self.state = 71
            self.match(LULU2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LULU2Parser.ExprContext,0)


        def EOF(self):
            return self.getToken(LULU2Parser.EOF, 0)

        def getRuleIndex(self):
            return LULU2Parser.RULE_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTest" ):
                listener.enterTest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTest" ):
                listener.exitTest(self)




    def test(self):

        localctx = LULU2Parser.TestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_test)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.expr(0)
            self.state = 74
            self.match(LULU2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ft_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_def(self):
            return self.getTypedRuleContext(LULU2Parser.Type_defContext,0)


        def fun_def(self):
            return self.getTypedRuleContext(LULU2Parser.Fun_defContext,0)


        def getRuleIndex(self):
            return LULU2Parser.RULE_ft_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFt_def" ):
                listener.enterFt_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFt_def" ):
                listener.exitFt_def(self)




    def ft_def(self):

        localctx = LULU2Parser.Ft_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ft_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LULU2Parser.Type]:
                self.state = 76
                self.type_def()
                pass
            elif token in [LULU2Parser.T__6, LULU2Parser.Function]:
                self.state = 77
                self.fun_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Type(self):
            return self.getToken(LULU2Parser.Type, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LULU2Parser.ID)
            else:
                return self.getToken(LULU2Parser.ID, i)

        def component(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LULU2Parser.ComponentContext)
            else:
                return self.getTypedRuleContext(LULU2Parser.ComponentContext,i)


        def getRuleIndex(self):
            return LULU2Parser.RULE_type_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_def" ):
                listener.enterType_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_def" ):
                listener.exitType_def(self)




    def type_def(self):

        localctx = LULU2Parser.Type_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(LULU2Parser.Type)
            self.state = 81
            self.match(LULU2Parser.ID)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LULU2Parser.T__0:
                self.state = 82
                self.match(LULU2Parser.T__0)
                self.state = 83
                self.match(LULU2Parser.ID)


            self.state = 86
            self.match(LULU2Parser.T__1)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.component()
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LULU2Parser.T__6) | (1 << LULU2Parser.Bool) | (1 << LULU2Parser.Const) | (1 << LULU2Parser.Function) | (1 << LULU2Parser.Float) | (1 << LULU2Parser.Int) | (1 << LULU2Parser.Private) | (1 << LULU2Parser.Protected) | (1 << LULU2Parser.Public) | (1 << LULU2Parser.String) | (1 << LULU2Parser.ID))) != 0)):
                    break

            self.state = 92
            self.match(LULU2Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_def(self):
            return self.getTypedRuleContext(LULU2Parser.Var_defContext,0)


        def fun_def(self):
            return self.getTypedRuleContext(LULU2Parser.Fun_defContext,0)


        def access_modifier(self):
            return self.getTypedRuleContext(LULU2Parser.Access_modifierContext,0)


        def getRuleIndex(self):
            return LULU2Parser.RULE_component

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent" ):
                listener.enterComponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent" ):
                listener.exitComponent(self)




    def component(self):

        localctx = LULU2Parser.ComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_component)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LULU2Parser.Private) | (1 << LULU2Parser.Protected) | (1 << LULU2Parser.Public))) != 0):
                self.state = 94
                self.access_modifier()


            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LULU2Parser.Bool, LULU2Parser.Const, LULU2Parser.Float, LULU2Parser.Int, LULU2Parser.String, LULU2Parser.ID]:
                self.state = 97
                self.var_def()
                pass
            elif token in [LULU2Parser.T__6, LULU2Parser.Function]:
                self.state = 98
                self.fun_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Access_modifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Private(self):
            return self.getToken(LULU2Parser.Private, 0)

        def Public(self):
            return self.getToken(LULU2Parser.Public, 0)

        def Protected(self):
            return self.getToken(LULU2Parser.Protected, 0)

        def getRuleIndex(self):
            return LULU2Parser.RULE_access_modifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess_modifier" ):
                listener.enterAccess_modifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess_modifier" ):
                listener.exitAccess_modifier(self)




    def access_modifier(self):

        localctx = LULU2Parser.Access_modifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_access_modifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LULU2Parser.Private) | (1 << LULU2Parser.Protected) | (1 << LULU2Parser.Public))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(LULU2Parser.Type_Context,0)


        def var_val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LULU2Parser.Var_valContext)
            else:
                return self.getTypedRuleContext(LULU2Parser.Var_valContext,i)


        def Const(self):
            return self.getToken(LULU2Parser.Const, 0)

        def getRuleIndex(self):
            return LULU2Parser.RULE_var_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_def" ):
                listener.enterVar_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_def" ):
                listener.exitVar_def(self)




    def var_def(self):

        localctx = LULU2Parser.Var_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LULU2Parser.Const:
                self.state = 103
                self.match(LULU2Parser.Const)


            self.state = 106
            self.type_()
            self.state = 107
            self.var_val()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LULU2Parser.T__3:
                self.state = 108
                self.match(LULU2Parser.T__3)
                self.state = 109
                self.var_val()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(LULU2Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Int(self):
            return self.getToken(LULU2Parser.Int, 0)

        def Bool(self):
            return self.getToken(LULU2Parser.Bool, 0)

        def Float(self):
            return self.getToken(LULU2Parser.Float, 0)

        def String(self):
            return self.getToken(LULU2Parser.String, 0)

        def ID(self):
            return self.getToken(LULU2Parser.ID, 0)

        def getRuleIndex(self):
            return LULU2Parser.RULE_type_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_" ):
                listener.enterType_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_" ):
                listener.exitType_(self)




    def type_(self):

        localctx = LULU2Parser.Type_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LULU2Parser.Bool) | (1 << LULU2Parser.Float) | (1 << LULU2Parser.Int) | (1 << LULU2Parser.String) | (1 << LULU2Parser.ID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_valContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ref(self):
            return self.getTypedRuleContext(LULU2Parser.RefContext,0)


        def expr(self):
            return self.getTypedRuleContext(LULU2Parser.ExprContext,0)


        def getRuleIndex(self):
            return LULU2Parser.RULE_var_val

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_val" ):
                listener.enterVar_val(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_val" ):
                listener.exitVar_val(self)




    def var_val(self):

        localctx = LULU2Parser.Var_valContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_val)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.ref()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LULU2Parser.T__5:
                self.state = 120
                self.match(LULU2Parser.T__5)
                self.state = 121
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fun_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Function(self):
            return self.getToken(LULU2Parser.Function, 0)

        def ID(self):
            return self.getToken(LULU2Parser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(LULU2Parser.BlockContext,0)


        def args_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LULU2Parser.Args_varContext)
            else:
                return self.getTypedRuleContext(LULU2Parser.Args_varContext,i)


        def getRuleIndex(self):
            return LULU2Parser.RULE_fun_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFun_def" ):
                listener.enterFun_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFun_def" ):
                listener.exitFun_def(self)




    def fun_def(self):

        localctx = LULU2Parser.Fun_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_fun_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LULU2Parser.T__6:
                self.state = 124
                self.match(LULU2Parser.T__6)
                self.state = 125
                self.args_var(0)
                self.state = 126
                self.match(LULU2Parser.T__7)
                self.state = 127
                self.match(LULU2Parser.T__5)


            self.state = 131
            self.match(LULU2Parser.Function)
            self.state = 132
            self.match(LULU2Parser.ID)
            self.state = 133
            self.match(LULU2Parser.T__6)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LULU2Parser.Bool) | (1 << LULU2Parser.Float) | (1 << LULU2Parser.Int) | (1 << LULU2Parser.String) | (1 << LULU2Parser.ID))) != 0):
                self.state = 134
                self.args_var(0)


            self.state = 137
            self.match(LULU2Parser.T__7)
            self.state = 138
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Args_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(LULU2Parser.Type_Context,0)


        def ID(self):
            return self.getToken(LULU2Parser.ID, 0)

        def args_var(self):
            return self.getTypedRuleContext(LULU2Parser.Args_varContext,0)


        def getRuleIndex(self):
            return LULU2Parser.RULE_args_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs_var" ):
                listener.enterArgs_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs_var" ):
                listener.exitArgs_var(self)



    def args_var(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LULU2Parser.Args_varContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_args_var, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.type_()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LULU2Parser.T__8:
                self.state = 142
                self.match(LULU2Parser.T__8)
                self.state = 143
                self.match(LULU2Parser.T__9)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(LULU2Parser.ID)
            self._ctx.stop = self._input.LT(-1)
            self.state = 165
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = LULU2Parser.Args_varContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_args_var)
                    self.state = 151
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 152
                    self.match(LULU2Parser.T__3)
                    self.state = 153
                    self.type_()
                    self.state = 158
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==LULU2Parser.T__8:
                        self.state = 154
                        self.match(LULU2Parser.T__8)
                        self.state = 155
                        self.match(LULU2Parser.T__9)
                        self.state = 160
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 161
                    self.match(LULU2Parser.ID) 
                self.state = 167
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LULU2Parser.Var_defContext)
            else:
                return self.getTypedRuleContext(LULU2Parser.Var_defContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LULU2Parser.StmtContext)
            else:
                return self.getTypedRuleContext(LULU2Parser.StmtContext,i)


        def getRuleIndex(self):
            return LULU2Parser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = LULU2Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(LULU2Parser.T__1)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LULU2Parser.T__6) | (1 << LULU2Parser.Bool) | (1 << LULU2Parser.Break) | (1 << LULU2Parser.Const) | (1 << LULU2Parser.Continue) | (1 << LULU2Parser.Destruct) | (1 << LULU2Parser.Float) | (1 << LULU2Parser.For) | (1 << LULU2Parser.If) | (1 << LULU2Parser.Int) | (1 << LULU2Parser.Read) | (1 << LULU2Parser.String) | (1 << LULU2Parser.Super) | (1 << LULU2Parser.Switch) | (1 << LULU2Parser.This) | (1 << LULU2Parser.While) | (1 << LULU2Parser.Write) | (1 << LULU2Parser.ID))) != 0):
                self.state = 171
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 169
                    self.var_def()
                    pass

                elif la_ == 2:
                    self.state = 170
                    self.stmt()
                    pass


                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 176
            self.match(LULU2Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(LULU2Parser.AssignContext,0)


        def func_call(self):
            return self.getTypedRuleContext(LULU2Parser.Func_callContext,0)


        def cond_stmt(self):
            return self.getTypedRuleContext(LULU2Parser.Cond_stmtContext,0)


        def loop_stmt(self):
            return self.getTypedRuleContext(LULU2Parser.Loop_stmtContext,0)


        def Break(self):
            return self.getToken(LULU2Parser.Break, 0)

        def Continue(self):
            return self.getToken(LULU2Parser.Continue, 0)

        def Destruct(self):
            return self.getToken(LULU2Parser.Destruct, 0)

        def ID(self):
            return self.getToken(LULU2Parser.ID, 0)

        def getRuleIndex(self):
            return LULU2Parser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = LULU2Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 200
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.assign()
                self.state = 179
                self.match(LULU2Parser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.func_call()
                self.state = 182
                self.match(LULU2Parser.T__4)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 184
                self.cond_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 185
                self.loop_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 186
                self.match(LULU2Parser.Break)
                self.state = 187
                self.match(LULU2Parser.T__4)
                pass
